--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                                 </div>
                             </div>
                             <div className="bg-black rounded-2xl p-8 md:p-12 text-white border border-white/5">
-                                <h3 className="text-xl font-bold mb-8 uppercase tracking-widest text-blue-500">Gửi đề xuất</h3>
+                                <h3 className="text-xl font-bold mb-8 uppercase tracking-widest text-blue-500">Tạo yêu cầu</h3>
                                 <form className="space-y-6" onSubmit={handleSubmit}>
                                     <input 
                                         type="text" 
@@ -468,10 +468,13 @@
                                         className="w-full bg-slate-900 border border-white/10 rounded-xl px-6 py-4 focus:outline-none focus:ring-2 focus:ring-blue-600 transition-all text-sm font-medium" 
                                         placeholder="Họ và tên" 
                                     />
+                                    {/* Phone input updated with 11-digit validation */}
                                     <input 
-                                        type="text" 
+                                        type="tel" 
                                         name="Số điện thoại"
                                         required
+                                        pattern="[0-9]{11}"
+                                        title="Vui lòng nhập đúng định dạng 11 chữ số"
                                         className="w-full bg-slate-900 border border-white/10 rounded-xl px-6 py-4 focus:outline-none focus:ring-2 focus:ring-blue-600 transition-all text-sm font-medium" 
                                         placeholder="Số điện thoại" 
                                     />
